@@ -31,6 +31,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #19403: contextlib.redirect_stdout is now reentrant
+
 - Issue #19286: Directories in ``package_data`` are no longer added to
   the filelist, preventing failure outlined in the ticket.
 
